bk_ida/gccida/g0/expr_size
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expr_size/src/explow.c:759:34: error: use of undeclared identifier 'machine_mode'
return expand_expr( size, 0LL, ( machine_mode)( BYTE5( sizetype_tab[0]->block.abstract_origin) >> 1), EXPAND_NORMAL); 
                                 ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expr_size/src/obj/explow.o] Error 1
